[package]
name = "stemgen"
version = "0.1.0"
edition = "2021"

[build-dependencies]
walkdir = "2"
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
anyhow = "1.0"
libflac-sys = { path = "libflac-sys" }
flacenc = { git = "https://github.com/yotarok/flacenc-rs", default-featuers = false }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17.0-rc.8"
bytemuck = "1.14.0"
log = "0.4"
rayon = "1.5.1"
simple_logger = "2.1.0"
walkdir = "2"
wav = "1.0"
